fix : User entity에서 usergender 삭제