@@ -50,7 +50,6 @@ public class SecurityConfiguration {
                 .rememberMe(AbstractHttpConfigurer::disable)
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
                 .headers(headers ->headers.frameOptions(HeadersConfigurer.FrameOptionsConfig::sameOrigin));  // Remember Me 기능 비활성화
-
         // 기존 frameOptions().sameOrigin() 설정에 해당하는 부분을 직접 설정
 //        http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.sameOrigin()));
 
@@ -66,8 +65,8 @@ public class SecurityConfiguration {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedOrigins(List.of("http://127.0.0.1:5173", "localhost:5173"));
-        configuration.setAllowedHeaders(Arrays.asList("X-AUTH-TOKEN", "Content-Type", "time-zone"));
+        configuration.setAllowedOrigins(List.of("http://127.0.0.1:5173", "http://localhost:5173"));
+        configuration.setAllowedHeaders(Arrays.asList("X-AUTH-TOKEN", "Content-Type", "time-zone", "*"));
         configuration.setAllowCredentials(true); // token 주고 받을때 필요
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setMaxAge(3600L); //만료 시간
